syntax = "proto3";

package dialog;
option go_package = "social_network/api/proto/dialog";

import "google/protobuf/empty.proto";


service DialogService{
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {}
  rpc WriteMessage(WriteMessageRequest) returns (google.protobuf.Empty) {}
}

message GetMessagesRequest {
  int64 id_user_1 = 1;
  int64 id_user_2 = 2;
  int64 limit = 3;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message Message {
  int64 id_user_1 = 1;
  int64 id_user_2 = 2;
  string message = 3;
  string date = 4;
}

message WriteMessageRequest {
  int64 id_user_1 = 1;
  int64 id_user_2 = 2;
  string message = 3;
}
